--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,6 @@ body {
     color: #212121;
     background-color: white;
     font-size: 14px;
-    font-weight: 400;
-
 }
 
 a {
@@ -46,6 +44,7 @@ button {
 .text-header {
      font-weight: 500;
     line-height: 1.14;
+    letter-spacing: 0.02em;
 }
 .no-dots {
     list-style: none;
@@ -88,11 +87,14 @@ button {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
+    letter-spacing: 0.06em;
+    border-radius: 4px;
 }
 
 .p-content {
     color: var(--second-color);
     line-height: 1.71;
+    letter-spacing: 0.03em;
 }
 
 .profession {
@@ -102,6 +104,7 @@ button {
 .text-prof {
 font-size: 16px;
 line-height: 1.18;
+letter-spacing: 0.03em;
 }
 
 
@@ -124,6 +127,8 @@ line-height: 1.18;
 
 .address {
     color: var(--address);
+    letter-spacing: 0.03em;
+    font-style: normal;
 }
 
 .address-contact {
@@ -135,9 +140,13 @@ line-height: 1.18;
 }
 
 .portf-btns {
+    background: #F5F4FA;
     font-size: 16px;
     font-weight:500;
     line-height: 1.62;
+    letter-spacing: 0.03em;
+    border: none;
+    border-radius: 4px;
 }
 
 .portf-btns:hover,
@@ -152,39 +161,46 @@ line-height: 1.18;
     text-decoration: none;
     font-weight: 700;
     line-height: 1.19;
+    letter-spacing: 0.03em;
 }
 
 .h1 {
     font-size: 44px;
     font-weight: 900;
     line-height: 1.36;
+    letter-spacing: 0.06em;
 }
 
 .h2 {
     font-size: 36px;
     font-weight: 700;
     line-height: 1.16;
+    letter-spacing: 0.03em;
 }
 
 .upper-p {
     font-weight: 700;
     line-height: 1.14;
+    letter-spacing: 0.03em;
 }
 
 .name {
 font-weight: 500;
 font-size: 16px;
 line-height: 1.18;
+letter-spacing: 0.03em;
 }
 /* portfolio main */
 .h3 {
 font-weight: 700;
 font-size: 18px;
 line-height: 2;
+letter-spacing: 0.06em;
 }
 
 .text-portfolio {
 font-size: 16px;
 line-height: 1.87;
+letter-spacing: 0.03em;
 }
 
